--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">College Buddy</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Action Bar Menu -->
     <string name="action_bar_menu_profile">Profile</string>
     <string name="action_bar_menu_settings">Settings</string>
+
+    <!-- Bottom Nav Menu -->
+    <string name="bottom_menu_home">Home</string>
+    <string name="bottom_menu_notes">Notes</string>
+    <string name="bottom_menu_attendance">Attendance</string>
 </resources>
