--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,18 @@
     <string name="bottom_menu_home">Home</string>
     <string name="bottom_menu_notes">Notes</string>
     <string name="bottom_menu_attendance">Attendance</string>
+    <string name="title_activity_login">LoginActivity</string>
+
+    <!-- Login Activity -->
+    <string name="login_fragment_tagline">The best college assistant</string>
+    <string name="login_edit_text_enrollment_hint">Enrollment Number</string>
+    <string name="login_edit_text_email_hint">Email</string>
+    <string name="login_edit_text_password_hint">Password</string>
+    <string name="login_edit_text_confirm_password_hint">Confirm Password</string>
+    <string name="login_fragment_forgot_password">Forgot Password?</string>
+    <string name="login_activity_log_in">Log in</string>
+    <string name="login_fragment_create_account">Don\'t have an account?</string>
+    <string name="login_activity_sign_up">SIGN UP</string>
+    <string name="register_fragment_confirmation">Already have an account?</string>
+    <string name="login_fragment_sign_up">Sign up</string>
 </resources>
