--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,11 @@
     <string name="login_activity_sign_up">SIGN UP</string>
     <string name="register_fragment_confirmation">Already have an account?</string>
     <string name="login_fragment_sign_up">Sign up</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Content Descriptions -->
+    <string name="bottom_sheet_access_button">Bottom Sheet Access Button</string>
+    <string name="id_card_image">Id Card Image</string>
+    <string name="add_subject_button">Add Subject Button</string>
+    <string name="back_button">Back Button</string>
+    <string name="pdf_icon">pdf icon</string>
 </resources>
