implemented pdf access from docs and show in pdf viewer (pdf storage not added)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="add_subject_button">Add Subject Button</string>
     <string name="back_button">Back Button</string>
     <string name="pdf_icon">pdf icon</string>
+    <string name="upload_pdf_button">Upload Pdf Button</string>
 </resources>
