--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,17 @@
     <!-- Action Bar Menu -->
     <string name="action_bar_menu_profile">Profile</string>
     <string name="action_bar_menu_settings">Settings</string>
+    <string name="action_bar_delete">Delete</string>
 
     <!-- Bottom Nav Menu -->
     <string name="bottom_menu_home">Home</string>
     <string name="bottom_menu_notes">Notes</string>
     <string name="bottom_menu_attendance">Attendance</string>
     <string name="title_activity_login">LoginActivity</string>
+
+    <!-- Alert Dialog -->
+    <string name="alert_dialog_yes">Yes</string>
+    <string name="alert_dialog_cancel">Cancel</string>
 
     <!-- Login Activity -->
     <string name="login_fragment_tagline">The best college assistant</string>
