--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,12 @@
 
     <!-- Fragment Notes -->
     <string name="fragment_notes_text_view_heading">Your Subjects</string>
+    <string name="fragment_attendance_title">Attendance</string>
+    <string name="fragment_attendance_text_view_total_classes">Today\'s Classes</string>
+    <string name="fragment_attendance_text_view_classes_attended">Classes Attended</string>
+    <string name="fragment_attendance_submit_button">SUBMIT</string>
+    <string name="fragment_attendance_summary_title">Summary</string>
+
+    <!-- Fragment Attendance -->
+
 </resources>
