--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <!-- Fragment Subject Notes -->
     <string name="fragment_subject_notes_add_pdf_hint">There are no Pdf\'s currently. Add pdf using upload button</string>
     <string name="fragment_home_time_table_title">Time Table</string>
+    <string name="bottom_sheet_upload_card_button_hint">Upload Id Card</string>
 </resources>
